added git links

--- a/static/main.html
+++ b/static/main.html
@@ -16,7 +16,7 @@
             Self-Supervised Learning on Diabetic Retinopathy Images
         </h1>
         <button class="btn slider btn-default btn-lg btn-light mt-5">
-            <a class="def" href="https://github.com/Dineswar11/dretino">
+            <a class="def" href="https://github.com/Maahi10001/D-Retino">
                 <h4>GitHub</h4>
             </a>
         </button>
